--- a/po/cs.po
+++ b/po/cs.po
@@ -508,9 +508,8 @@ msgid "2"
 msgstr "2"
 
 #
-#, fuzzy
 msgid "2 new lines"
-msgstr "Dva řádky"
+msgstr "dvě odřádkování"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -2264,7 +2263,7 @@ msgid "Configure remote control type"
 msgstr "Nastavit typ dálkového ovládání"
 
 msgid "Configure separator type used in full description for separate short and extended descriptions."
-msgstr ""
+msgstr "Nastavuje oddělovač používaný v EPG pro oddělení krátkého a rozšířeného popisu."
 
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Nastavuje DiSEqC mód pro tento LNB."
@@ -4433,7 +4432,7 @@ msgid "Frontprocessor version: %s"
 msgstr "Frontprocesor: %s"
 
 msgid "Full description separator"
-msgstr ""
+msgstr "Oddělovač pro EPG"
 
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
@@ -6673,9 +6672,8 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-#, fuzzy
 msgid "PULSe 4K(mini)"
-msgstr "PULSe 4K"
+msgstr "PULSe 4K(mini)"
 
 #
 msgid "Package list update"
@@ -7868,7 +7866,7 @@ msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subt
 msgstr "Nahradí `- ` v dialozích, které mají obarvený text jednotlivých mluvčích (jako teletextové titulky pro sluchově postižené)."
 
 msgid "Replace newlines in EPG"
-msgstr ""
+msgstr "Nahrazovat odřádkování v EPG"
 
 msgid "Request for physical address report"
 msgstr "Požadavek na ohlášení fyzické adresy"
@@ -8548,7 +8546,7 @@ msgid "Select channel to record from"
 msgstr "Vyberte kanál z kterého chcete nahrávat"
 
 msgid "Select char for replacing newlines in epg."
-msgstr ""
+msgstr "Vyberte znak, kterým bude nahrazováno odřádkování v EPG."
 
 #
 msgid "Select copy destination for:"
@@ -10164,7 +10162,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®24. 8. 2021"
+"®2. 9. 2021"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -12272,7 +12270,7 @@ msgstr "Nezvolili jste kanál pro nahrávání."
 
 #, python-format
 msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
-msgstr ""
+msgstr "Musíte počkat %(min)d minut, %(sec)d vteřin!"
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13074,9 +13072,8 @@ msgid "never"
 msgstr "Nikdy"
 
 #
-#, fuzzy
 msgid "new line"
-msgstr "Dva řádky"
+msgstr "odřádkování"
 
 msgid "new media"
 msgstr "new media"
@@ -13150,9 +13147,8 @@ msgid "not_tested"
 msgstr "netestováno"
 
 #
-#, fuzzy
 msgid "nothing"
-msgstr "Nedělat nic"
+msgstr "nic"
 
 #
 msgid "nothing connected"
@@ -13177,7 +13173,7 @@ msgid "offset is"
 msgstr "posun je"
 
 msgid "omit"
-msgstr ""
+msgstr "vynechat"
 
 #
 msgid "on"
@@ -13419,7 +13415,7 @@ msgid "social/spiritual science"
 msgstr "sociální/duchovní vědy"
 
 msgid "space"
-msgstr ""
+msgstr "mezera"
 
 msgid "special events"
 msgstr "zvláštní události"
