--- a/po/uk.po
+++ b/po/uk.po
@@ -466,9 +466,8 @@ msgstr "18 В"
 msgid "2"
 msgstr "2"
 
-#, fuzzy
 msgid "2 new lines"
-msgstr "Два рядки"
+msgstr "Два нові рядки"
 
 msgid "20 MB/s"
 msgstr "20 MБ/с"
@@ -1985,7 +1984,7 @@ msgid "Configure remote control type"
 msgstr "Налаштування типу пульта керування"
 
 msgid "Configure separator type used in full description for separate short and extended descriptions."
-msgstr ""
+msgstr "Налаштуйте тип сепаратора, що використовується в повному описі, для окремих коротких та розширених описів."
 
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Налаштування DiSEqC режиму для цього конвертора."
@@ -3870,7 +3869,7 @@ msgid "Frontprocessor version: %s"
 msgstr "Версія фронтпроцесора: %s"
 
 msgid "Full description separator"
-msgstr ""
+msgstr "Повний опис сепаратора"
 
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
@@ -4043,7 +4042,7 @@ msgid "Greenland"
 msgstr "Гренландія"
 
 msgid "Grenada"
-msgstr ""
+msgstr "Гренада"
 
 msgid "Guadeloupe"
 msgstr "Гваделупа"
@@ -5821,9 +5820,8 @@ msgstr "ПІД РМТ"
 msgid "PPanel"
 msgstr ""
 
-#, fuzzy
 msgid "PULSe 4K(mini)"
-msgstr "PULSe 4K"
+msgstr "PULSe 4K(mini)"
 
 msgid "Package list update"
 msgstr "Оновлення списку пакетів"
@@ -6823,7 +6821,7 @@ msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subt
 msgstr "Замінити `- ` в діалогових вікнах з кольоровим текстом на лектора (як субтитри телетексту для людей з вадами слуху)"
 
 msgid "Replace newlines in EPG"
-msgstr ""
+msgstr "Замінити нові рядки в EPG"
 
 msgid "Request for physical address report"
 msgstr "Запит на звіт про фізичну адресу"
@@ -7408,7 +7406,7 @@ msgid "Select channel to record from"
 msgstr "Вибір каналу для запису з"
 
 msgid "Select char for replacing newlines in epg."
-msgstr ""
+msgstr "Виберіть символ для заміни нових рядків у epg."
 
 msgid "Select copy destination for:"
 msgstr "Виберіть місце для копіювання:"
@@ -8818,7 +8816,7 @@ msgstr ""
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
 msgstr ""
-"Переклад:  kvinto - 28.08.2021\n"
+"Переклад:  kvinto - 07.09.2021\n"
 "Сторінка:    https://gisclub.tv\n"
 "                  kvinto@rambler.ru"
 
@@ -10713,7 +10711,7 @@ msgstr "Ви не обрали канал для запису."
 
 #, python-format
 msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
-msgstr ""
+msgstr "Вам потрібно почекати %(хв)d хвилин, %(сек)d секунд!"
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11416,9 +11414,8 @@ msgstr "природа/тварини/навколишнє середовище"
 msgid "never"
 msgstr "ніколи"
 
-#, fuzzy
 msgid "new line"
-msgstr "Два рядки"
+msgstr "новий рядок"
 
 msgid "new media"
 msgstr "нові медіа"
@@ -11480,9 +11477,8 @@ msgstr "недійсний інтерфейс"
 msgid "not_tested"
 msgstr "не_тестується"
 
-#, fuzzy
 msgid "nothing"
-msgstr "Нічого не робити"
+msgstr "нічого"
 
 msgid "nothing connected"
 msgstr "нічого не під'єднано"
@@ -11503,7 +11499,7 @@ msgid "offset is"
 msgstr "зміщення є"
 
 msgid "omit"
-msgstr ""
+msgstr "опустити"
 
 msgid "on"
 msgstr "включено"
@@ -11714,7 +11710,7 @@ msgid "social/spiritual science"
 msgstr "соціальна/духовна наука"
 
 msgid "space"
-msgstr ""
+msgstr "проміжок"
 
 msgid "special events"
 msgstr "особливі події"
