es.po + lt.po + fr.po

--- a/po/es.po
+++ b/po/es.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-10 01:42+0300\n"
-"PO-Revision-Date: 2021-05-25 18:08+0200\n"
+"PO-Revision-Date: 2021-09-11 18:52+0200\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
 "Language: es\n"
@@ -56,9 +56,8 @@ msgstr ""
 "¡El temporizador '%s' está deshabilitado!"
 
 #
-#, fuzzy
 msgid " (+5 volt terrestrial)"
-msgstr "Terrestre"
+msgstr "(+5 voltios terrestres)"
 
 msgid " (0 - all networks)"
 msgstr "(0 - todas las redes)"
@@ -96,7 +95,7 @@ msgid " (lower than any auto)"
 msgstr "(menor que en automático)"
 
 msgid " - Unicable/JESS LNBs not found"
-msgstr ""
+msgstr "- No se encontraron los LNB Unicable / JESS"
 
 msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs because each tuner need a own SCR number."
 msgstr " Advertencia: el sintonizador seleccionado no debe utilizar el tipo SCR Unicable para LNBs porque cada sintonizador necesita un propio número SCR."
@@ -117,7 +116,7 @@ msgid " packages selected."
 msgstr "paquetes seleccionados."
 
 msgid " unicable LNB input of rotor"
-msgstr ""
+msgstr "entrada LNB unicable del rotor"
 
 #
 #, python-format
@@ -458,9 +457,8 @@ msgid "2"
 msgstr "2"
 
 #
-#, fuzzy
 msgid "2 new lines"
-msgstr "Dos lineas"
+msgstr "Dos nuevas lineas"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -1874,7 +1872,7 @@ msgid "Check the internet connection again"
 msgstr "Compruebe la conexión a Internet de nuevo"
 
 msgid "Checking ONID/TSID"
-msgstr ""
+msgstr "Comprobación de ONID / TSID"
 
 #
 msgid "Checking filesystem..."
@@ -2160,7 +2158,7 @@ msgid "Configure remote control type"
 msgstr "Tipo de control de adultos"
 
 msgid "Configure separator type used in full description for separate short and extended descriptions."
-msgstr ""
+msgstr "Configure el tipo de separador utilizado en la descripción completa para descripciones breves y extendidas separadas."
 
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configure el modo DiSEqC para este LNB."
@@ -3647,7 +3645,7 @@ msgid "Enter the service pin"
 msgstr "Ponga el pin del canal"
 
 msgid "Enter valid ONID/TSID"
-msgstr ""
+msgstr "Entrada valida ONID/TSID"
 
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Ingrese su latitud actual. Este es el número de grados que eres del ecuador como un decimal."
@@ -3955,10 +3953,10 @@ msgstr ""
 
 #, python-format
 msgid "FBC socket %s"
-msgstr ""
+msgstr "Conector FBC% s"
 
 msgid "FBC virtual"
-msgstr ""
+msgstr "FBC virtual"
 
 #
 msgid "FEC"
@@ -4163,7 +4161,7 @@ msgid "Force legacy signal stats"
 msgstr "Forzar estadísticas de señales heredadas"
 
 msgid "Force zap to recording service in standby"
-msgstr ""
+msgstr "Forzar zap al servicio de grabación en espera"
 
 #
 msgid "Format"
@@ -4233,7 +4231,7 @@ msgid "Frontprocessor version: %s"
 msgstr "Versión de FrontProcessor:% s"
 
 msgid "Full description separator"
-msgstr ""
+msgstr "Separador de descripción completa"
 
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
@@ -4258,9 +4256,8 @@ msgid "G"
 msgstr "G"
 
 #
-#, fuzzy
 msgid "GB"
-msgstr "RGB"
+msgstr "GB"
 
 #
 msgid "GUI Settings"
@@ -4566,7 +4563,7 @@ msgid "Hide player"
 msgstr "Ocultar player"
 
 msgid "Hide sub-menu"
-msgstr ""
+msgstr "Ocultar submenú"
 
 msgid "Hide zap errors"
 msgstr "Ocultar errores de zap"
@@ -4651,9 +4648,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "No quiero realizar ningún escaneo de servicio"
 
-#, fuzzy
 msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
-msgstr "Zgemma H7(nuevo modelo)/H9(nuevo modelo)/H9COMBO/H9TWIN/H10"
+msgstr "I55SE / H7 (nuevo modelo) / H9 (nuevo modelo) / H9COMBO / H9TWIN / H9SE / H9COMBOSE / H10 / H11"
 
 msgid "IDLE"
 msgstr "IDLE"
@@ -5381,9 +5377,8 @@ msgid "Luxembourgish"
 msgstr "Luxemburgués"
 
 #
-#, fuzzy
 msgid "MB"
-msgstr "B"
+msgstr "MB"
 
 #
 msgid "MMC card"
@@ -6415,7 +6410,7 @@ msgid "PPanel"
 msgstr "PPanel"
 
 msgid "PULSe 4K(mini)"
-msgstr ""
+msgstr "PULSe 4K (mini)"
 
 #
 msgid "Package list update"
@@ -7571,7 +7566,7 @@ msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subt
 msgstr "Reemplace `-` en diálogos con texto de color por altavoz (como los subtítulos de teletexto para personas con discapacidad auditiva)"
 
 msgid "Replace newlines in EPG"
-msgstr ""
+msgstr "Reemplazar nuevas líneas en EPG"
 
 msgid "Request for physical address report"
 msgstr "Solicitud de informe de dirección física"
@@ -8222,7 +8217,7 @@ msgid "Select channel to record from"
 msgstr "Seleccione canal a grabar"
 
 msgid "Select char for replacing newlines in epg."
-msgstr ""
+msgstr "Seleccione char para reemplazar nuevas líneas en epg."
 
 msgid "Select copy destination for:"
 msgstr "Seleccione el destino de la copia para:"
@@ -8259,9 +8254,8 @@ msgstr "Seleccione cómo se configura la antena parabólica. es decir, plato fij
 msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
 msgstr "Seleccione cómo desea que su receptor mantenga la hora correcta, ya sea desde el transpondedor DVB o desde Internet usando NTP. O use Auto, que favorecerá el uso de NTP, pero volverá al tiempo del transpondedor cuando no haya conexión a Internet disponible."
 
-#, fuzzy
 msgid "Select image"
-msgstr "Borrar imagen"
+msgstr "Seleccionar imagen"
 
 msgid "Select input device"
 msgstr "Seleccione dispositivo de entrada"
@@ -8920,9 +8914,8 @@ msgstr "Mostrar iconos de estado en la lista de películas"
 msgid "Show status icons in movielist"
 msgstr "Mostrar iconos de estado en la lista de películas"
 
-#, fuzzy
 msgid "Show sub-menu"
-msgstr "Mostrar columnas"
+msgstr "Mostrar submenú"
 
 msgid "Show subservice selection"
 msgstr "Mostrar selección de servicios"
@@ -9467,9 +9460,8 @@ msgid "Stop entry"
 msgstr "Detener la entrada"
 
 #
-#, fuzzy
 msgid "Stop live TV service"
-msgstr "Ir al último servicio"
+msgstr "Detener el servicio de TV en vivo"
 
 msgid "Stop play TV"
 msgstr "Deja de jugar TV"
@@ -10080,7 +10072,7 @@ msgid "This DVD RW medium is already formatted - reformatting will erase all con
 msgstr "El disco DVD-RW está ya formateado - reformatear borrará todos los contenidos del disco."
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
-msgstr ""
+msgstr "Esto puede resultar útil cuando se utiliza el módulo CI (+). Una vez finalizada la grabación, el servicio se detendrá automáticamente."
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
@@ -10102,7 +10094,7 @@ msgid "This is the order in which DiSEqC commands are sent to the aerial system.
 msgstr "el suyo es el orden en que los comandos DiSEqC se envían al sistema aéreo. La orden debe corresponderse exactamente con el orden en que los dispositivos físicos están dispuestos a lo largo del cable de señal (comenzando desde el extremo del receptor)."
 
 msgid "This not valid ONID/TSID"
-msgstr ""
+msgstr "Esto no es válido ONID / TSID"
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Esta opción te permite reducir el bloqueo de ruido en la imagen. Obviamente, se reduce la nitidez de la imagen."
@@ -10302,7 +10294,7 @@ msgid "This test detects your configured LAN adapter."
 msgstr "Esta prueba detecta su adaptador LAN configurado."
 
 msgid "This valid ONID/TSID"
-msgstr ""
+msgstr "Este ONID / TSID válido"
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10988,11 +10980,11 @@ msgstr "Usuario - bouquets"
 
 #, python-format
 msgid "User Band %d"
-msgstr ""
+msgstr "Banda de usuario% d"
 
 #, python-format
 msgid "User Band %d (%s)"
-msgstr ""
+msgstr "Banda de usuario% d (% s)"
 
 #
 msgid "User ID"
@@ -11048,7 +11040,7 @@ msgid "VU+"
 msgstr "VU+"
 
 msgid "Valid ONID/TSID look at www.lyngsat.com..."
-msgstr ""
+msgstr "Consulta ONID / TSID válida en www.lyngsat.com …"
 
 msgid "Vanuatu"
 msgstr "Vanuatu"
@@ -11307,7 +11299,7 @@ msgstr ""
 "Realmente desactivar la detección de conflictos del temporizador?"
 
 msgid "Warning: FBC-C V1 tuner should be connected to the first slot to work correctly. Otherwise, only 2 out of 8 demodulators will be available when connected in the second slot. "
-msgstr ""
+msgstr "Advertencia: el sintonizador FBC-C V1 debe estar conectado a la primera ranura para que funcione correctamente. De lo contrario, solo 2 de los 8 demoduladores estarán disponibles cuando se conecten en la segunda ranura."
 
 msgid "Warning: no LNB; using factory defaults."
 msgstr "Advertencia: no hay LNB; Utilizando los valores predeterminados de fábrica."
@@ -11845,7 +11837,7 @@ msgstr "No ha seleccionado un canal desde el cual grabar."
 
 #, python-format
 msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
-msgstr ""
+msgstr "¡Tienes que esperar %(min)d minutos,% (seg) d segundos!"
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12632,9 +12624,8 @@ msgid "never"
 msgstr "nunca"
 
 #
-#, fuzzy
 msgid "new line"
-msgstr "Dos lineas"
+msgstr "nueva linea"
 
 msgid "new media"
 msgstr "nuevos medios de comunicacion"
@@ -12703,9 +12694,8 @@ msgid "not_tested"
 msgstr "no probado"
 
 #
-#, fuzzy
 msgid "nothing"
-msgstr "no hacer nada"
+msgstr "nada"
 
 #
 msgid "nothing connected"
@@ -12730,7 +12720,7 @@ msgid "offset is"
 msgstr "El desplazamiento es"
 
 msgid "omit"
-msgstr ""
+msgstr "omitir"
 
 #
 msgid "on"
@@ -12966,7 +12956,7 @@ msgid "social/spiritual science"
 msgstr "Ciencia social / espiritual"
 
 msgid "space"
-msgstr ""
+msgstr "espacio"
 
 msgid "special events"
 msgstr "especial eventos"
