--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -100,9 +100,6 @@ msgstr ""
 msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs because each tuner need a own SCR number."
 msgstr ""
 
-msgid " extensions."
-msgstr " filendelser."
-
 #
 #, fuzzy
 msgid " min"
@@ -110,9 +107,6 @@ msgstr "%d min"
 
 msgid " ms"
 msgstr "ms"
-
-msgid " packages selected."
-msgstr "pakker valgt."
 
 msgid " unicable LNB input of rotor"
 msgstr ""
@@ -410,6 +404,12 @@ msgstr "0"
 msgid "1"
 msgstr "1"
 
+#, fuzzy, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] "pakker valgt."
+msgstr[1] "pakker valgt."
+
 msgid "10 MB/s"
 msgstr ""
 
@@ -623,6 +623,10 @@ msgstr "En optagelse er igang. Stop, venligst denne optagelse før du begynder k
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
 msgstr "En optagelse er i øjeblikket i gang. Stop optagelsen før du forsøger at starte testen af DiSEqC."
+
+#
+msgid "A repeating event is currently recording. What would you like to do?"
+msgstr "Gentage program optagelse som er igang. Hvad vil du foretage dig?"
 
 #
 #, python-format
@@ -3699,6 +3703,10 @@ msgstr "IP adresse"
 msgid "Enter PIN"
 msgstr "Indtast PIN"
 
+#
+msgid "Enter PIN code"
+msgstr "Indtast pinkode"
+
 #, fuzzy
 msgid "Enter URL"
 msgstr "Indtast PIN"
@@ -3718,10 +3726,6 @@ msgstr "Åbne hoved menu..."
 
 msgid "Enter persistent PIN code"
 msgstr "Indtast vedvarende PIN kode"
-
-#
-msgid "Enter PIN code"
-msgstr "Indtast pinkode"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr ""
@@ -7757,17 +7761,6 @@ msgstr "Gentag afspilningsliste"
 msgid "Repeat type"
 msgstr "Gentagelses type"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-"Gentagende begivenhed er i øjeblikket ved at optage.\n"
-"Hvad vil du gøre?"
-
-#
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Gentage program optagelse som er igang. Hvad vil du foretage dig?"
-
 #
 msgid "Repeats"
 msgstr "Gentagelser"
@@ -10195,6 +10188,10 @@ msgstr "PIN koden er ændret med succes."
 msgid "The PIN code has been saved successfully."
 msgstr "PIN koden er succesfuldt blevet gemt."
 
+#
+msgid "The PIN code you entered is wrong."
+msgstr "Din indtastede PIN kode er forkert."
+
 msgid "The PIN codes you entered are different."
 msgstr "PIN koderne du tastede er ikke ens."
 
@@ -10266,10 +10263,6 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Stien %s findes allerede."
-
-#
-msgid "The PIN code you entered is wrong."
-msgstr "Din indtastede PIN kode er forkert."
 
 #, python-format
 msgid "The results have been written to %s"
@@ -10365,6 +10358,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Denne DVD RW er allerede formatteret - reformattering vil slette alt indhold på disken."
+
+msgid "This bouquet is protected by a parental control PIN"
+msgstr "Denne bouquet er beskyttet af forældrekontrol PIN"
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr ""
@@ -10500,10 +10496,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -10543,6 +10539,10 @@ msgstr "Dette plugin vil blive fjernet"
 #, python-format
 msgid "This receiver cannot decode %s streams!"
 msgstr "Denne receiver kan ikke dekode %s streams!"
+
+#
+msgid "This service is protected by a parental control PIN"
+msgstr "Denne service er beskyttet af forældrekontrol PIN"
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr ""
@@ -11479,8 +11479,9 @@ msgid "View details"
 msgstr "Se detaljer"
 
 #
-msgid "View list of available "
-msgstr "Se liste over tilgængelige"
+#, fuzzy, python-format
+msgid "View list of available %s extensions."
+msgstr "Vis oplistning af tilgængelige EPG udvidelser."
 
 #
 msgid "View list of available CommonInterface extensions"
@@ -12117,10 +12118,6 @@ msgstr "Gendan backup"
 msgid "Yesterday"
 msgstr "I går"
 
-#, fuzzy
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr "Din PIN kode er 0000. Dette er en standard PIN kode og den deaktivere forældrekontrol!\n"
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -12205,6 +12202,10 @@ msgstr "Du må skifte til servicen %s (%s - '%s')!\n"
 
 msgid "You seem to be in timeshift!"
 msgstr ""
+
+#, fuzzy
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
+msgstr "Din PIN kode er 0000. Dette er en standard PIN kode og den deaktivere forældrekontrol!\n"
 
 #
 msgid "Your collection exceeds the size of a single layer medium, you will need a blank dual layer DVD!"
@@ -12498,6 +12499,9 @@ msgstr "tilbage"
 msgid "background image"
 msgstr "baggrunds billede"
 
+msgid "backup EPG cache"
+msgstr "backup EPG cache"
+
 msgid "ballet"
 msgstr "ballet"
 
@@ -12678,9 +12682,6 @@ msgstr "underholdning (10-16 år gammel)"
 
 msgid "entertainment (6-14 year old)"
 msgstr "entertainment (6-14 year old)"
-
-msgid "backup EPG cache"
-msgstr "backup EPG cache"
 
 msgid "equestrian"
 msgstr "dressur"
@@ -13410,16 +13411,9 @@ msgstr "tennis/squash"
 msgid "testing"
 msgstr "fungerer"
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr "Denne bouquet er beskyttet af forældrekontrol PIN"
-
 #
 msgid "this recording"
 msgstr "denne optagelse"
-
-#
-msgid "This service is protected by a parental control PIN"
-msgstr "Denne service er beskyttet af forældrekontrol PIN"
 
 #
 msgid "toggle time, chapter, audio, subtitle info"
