--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -92,18 +92,12 @@ msgstr ""
 msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs because each tuner need a own SCR number."
 msgstr ""
 
-msgid " extensions."
-msgstr "بسته ها"
-
 #, fuzzy
 msgid " min"
 msgstr "%d دقیقه"
 
 msgid " ms"
 msgstr "میلی ثانیه"
-
-msgid " packages selected."
-msgstr "بسته های انتخاب شده"
 
 msgid " unicable LNB input of rotor"
 msgstr ""
@@ -374,6 +368,11 @@ msgstr "0"
 msgid "1"
 msgstr "1"
 
+#, fuzzy, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] "بسته های انتخاب شده"
+
 msgid "10 MB/s"
 msgstr "10 مگ بر ثانیه"
 
@@ -559,6 +558,9 @@ msgid "A recording is currently running. Please stop the recording before trying
 msgstr "ضبط کردن در حال اجرا است ، لطفا قبل از اسکن کردن ضبط را متوقف کنید"
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
+msgstr ""
+
+msgid "A repeating event is currently recording. What would you like to do?"
 msgstr ""
 
 #, python-format
@@ -3329,6 +3331,9 @@ msgstr "IP آدرس"
 msgid "Enter PIN"
 msgstr ""
 
+msgid "Enter PIN code"
+msgstr "رمز را وارد کنید"
+
 msgid "Enter URL"
 msgstr ""
 
@@ -3346,9 +3351,6 @@ msgstr "ورود به منوی اصلی"
 
 msgid "Enter persistent PIN code"
 msgstr ""
-
-msgid "Enter PIN code"
-msgstr "رمز را وارد کنید"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr ""
@@ -6961,14 +6963,6 @@ msgstr ""
 msgid "Repeat type"
 msgstr "نوع تکرار"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr ""
-
 msgid "Repeats"
 msgstr "تکرار ها"
 
@@ -9196,6 +9190,9 @@ msgstr "رمز با موفقیت تغییر کرد"
 msgid "The PIN code has been saved successfully."
 msgstr ""
 
+msgid "The PIN code you entered is wrong."
+msgstr ""
+
 msgid "The PIN codes you entered are different."
 msgstr "رمز های وارد شده متفاوت هستند"
 
@@ -9254,9 +9251,6 @@ msgstr ""
 
 #, python-format
 msgid "The path %s already exists."
-msgstr ""
-
-msgid "The PIN code you entered is wrong."
 msgstr ""
 
 #, python-format
@@ -9337,6 +9331,9 @@ msgid ""
 msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
+msgstr ""
+
+msgid "This bouquet is protected by a parental control PIN"
 msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
@@ -9448,10 +9445,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -9486,6 +9483,9 @@ msgstr ""
 
 #, python-format
 msgid "This receiver cannot decode %s streams!"
+msgstr ""
+
+msgid "This service is protected by a parental control PIN"
 msgstr ""
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
@@ -10269,8 +10269,9 @@ msgstr ""
 msgid "View details"
 msgstr ""
 
-msgid "View list of available "
-msgstr ""
+#, fuzzy, python-format
+msgid "View list of available %s extensions."
+msgstr "لیست شبکه های در دسترس"
 
 msgid "View list of available CommonInterface extensions"
 msgstr ""
@@ -10826,9 +10827,6 @@ msgstr "بله ، بدون نسخه پشتیبان"
 msgid "Yesterday"
 msgstr ""
 
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr ""
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -10903,6 +10901,9 @@ msgid "You must switch to the service %s (%s - '%s')!\n"
 msgstr ""
 
 msgid "You seem to be in timeshift!"
+msgstr ""
+
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
 msgstr ""
 
 msgid "Your collection exceeds the size of a single layer medium, you will need a blank dual layer DVD!"
@@ -11152,6 +11153,9 @@ msgstr "عقب"
 msgid "background image"
 msgstr "تصویر پس زمینه"
 
+msgid "backup EPG cache"
+msgstr ""
+
 msgid "ballet"
 msgstr ""
 
@@ -11307,9 +11311,6 @@ msgid "entertainment (10-16 year old)"
 msgstr ""
 
 msgid "entertainment (6-14 year old)"
-msgstr ""
-
-msgid "backup EPG cache"
 msgstr ""
 
 msgid "equestrian"
@@ -11946,13 +11947,7 @@ msgstr ""
 msgid "testing"
 msgstr ""
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr ""
-
 msgid "this recording"
-msgstr ""
-
-msgid "This service is protected by a parental control PIN"
 msgstr ""
 
 msgid "toggle time, chapter, audio, subtitle info"
