--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -97,19 +97,11 @@ msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs be
 msgstr ""
 
 #
-msgid " extensions."
-msgstr ""
-
-#
 #, fuzzy
 msgid " min"
 msgstr "%d min"
 
 msgid " ms"
-msgstr ""
-
-#
-msgid " packages selected."
 msgstr ""
 
 msgid " unicable LNB input of rotor"
@@ -412,6 +404,12 @@ msgstr "0"
 msgid "1"
 msgstr "1"
 
+#, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] ""
+msgstr[1] ""
+
 msgid "10 MB/s"
 msgstr ""
 
@@ -630,6 +628,10 @@ msgstr ""
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
 msgstr ""
+
+#
+msgid "A repeating event is currently recording. What would you like to do?"
+msgstr "Herhelle barren an it opnimmen. Wat wolle jo dwaan ?"
 
 #
 #, python-format
@@ -3727,6 +3729,10 @@ msgstr "IP Adres"
 msgid "Enter PIN"
 msgstr ""
 
+#
+msgid "Enter PIN code"
+msgstr ""
+
 msgid "Enter URL"
 msgstr ""
 
@@ -3744,10 +3750,6 @@ msgid "Enter main menu..."
 msgstr "Nei it haadmenu..."
 
 msgid "Enter persistent PIN code"
-msgstr ""
-
-#
-msgid "Enter PIN code"
 msgstr ""
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
@@ -7841,15 +7843,6 @@ msgstr "ôfspyllyst opnei spylje"
 msgid "Repeat type"
 msgstr "Herhelje Type"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-
-#
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Herhelle barren an it opnimmen. Wat wolle jo dwaan ?"
-
 #
 msgid "Repeats"
 msgstr "Herhellingen"
@@ -10326,6 +10319,10 @@ msgstr ""
 msgid "The PIN code has been saved successfully."
 msgstr ""
 
+#
+msgid "The PIN code you entered is wrong."
+msgstr "De ynjûne pinkode is ferkeard."
+
 msgid "The PIN codes you entered are different."
 msgstr ""
 
@@ -10388,10 +10385,6 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "It paad %s bestiit al."
-
-#
-msgid "The PIN code you entered is wrong."
-msgstr "De ynjûne pinkode is ferkeard."
 
 #, python-format
 msgid "The results have been written to %s"
@@ -10488,6 +10481,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Dit DVD RW medium is al formattearre. Wer opnei dwaan sil alle gegevens op disk wiskje."
+
+msgid "This bouquet is protected by a parental control PIN"
+msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr ""
@@ -10598,10 +10594,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -10641,6 +10637,10 @@ msgstr ""
 #, python-format
 msgid "This receiver cannot decode %s streams!"
 msgstr ""
+
+#
+msgid "This service is protected by a parental control PIN"
+msgstr "Dit kanaal is net beskikber troch it alderlik tasjoch."
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr ""
@@ -11599,8 +11599,8 @@ msgstr "Rass interaktief sjen litte"
 msgid "View details"
 msgstr ""
 
-#
-msgid "View list of available "
+#, python-format
+msgid "View list of available %s extensions."
 msgstr ""
 
 #
@@ -12218,9 +12218,6 @@ msgstr ""
 msgid "Yesterday"
 msgstr ""
 
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr ""
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -12301,6 +12298,9 @@ msgid "You must switch to the service %s (%s - '%s')!\n"
 msgstr ""
 
 msgid "You seem to be in timeshift!"
+msgstr ""
+
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
 msgstr ""
 
 #
@@ -12574,6 +12574,9 @@ msgstr "werom"
 msgid "background image"
 msgstr "Eftergrûn ôfbylding"
 
+msgid "backup EPG cache"
+msgstr ""
+
 msgid "ballet"
 msgstr ""
 
@@ -12753,9 +12756,6 @@ msgid "entertainment (10-16 year old)"
 msgstr ""
 
 msgid "entertainment (6-14 year old)"
-msgstr ""
-
-msgid "backup EPG cache"
 msgstr ""
 
 msgid "equestrian"
@@ -13484,16 +13484,9 @@ msgstr ""
 msgid "testing"
 msgstr ""
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr ""
-
 #
 msgid "this recording"
 msgstr "dit opnimmen"
-
-#
-msgid "This service is protected by a parental control PIN"
-msgstr "Dit kanaal is net beskikber troch it alderlik tasjoch."
 
 #
 msgid "toggle time, chapter, audio, subtitle info"
