--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2020-05-16 18:44+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -95,9 +95,6 @@ msgstr ""
 msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs because each tuner need a own SCR number."
 msgstr ""
 
-msgid " extensions."
-msgstr " viðbætur."
-
 #
 #, fuzzy
 msgid " min"
@@ -105,10 +102,6 @@ msgstr "%d min"
 
 msgid " ms"
 msgstr " ms"
-
-#
-msgid " packages selected."
-msgstr " pakkar valdir."
 
 msgid " unicable LNB input of rotor"
 msgstr ""
@@ -410,6 +403,13 @@ msgstr "0"
 msgid "1"
 msgstr "1"
 
+#
+#, fuzzy, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] " pakkar valdir."
+msgstr[1] " pakkar valdir."
+
 msgid "10 MB/s"
 msgstr ""
 
@@ -622,6 +622,10 @@ msgstr ""
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
 msgstr ""
+
+#
+msgid "A repeating event is currently recording. What would you like to do?"
+msgstr "Endurtaka atriði sem er í upptöku. hvað viltu gera núna?"
 
 #
 #, python-format
@@ -3574,6 +3578,9 @@ msgstr "IP Netfang"
 msgid "Enter PIN"
 msgstr ""
 
+msgid "Enter PIN code"
+msgstr "Slá inn kóða"
+
 msgid "Enter URL"
 msgstr ""
 
@@ -3592,9 +3599,6 @@ msgstr "Fara í aðal valmynd..."
 
 msgid "Enter persistent PIN code"
 msgstr ""
-
-msgid "Enter PIN code"
-msgstr "Slá inn kóða"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr ""
@@ -7664,15 +7668,6 @@ msgstr "Endurtaka spilunarlista"
 msgid "Repeat type"
 msgstr "Gerð endurtekningar"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-
-#
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Endurtaka atriði sem er í upptöku. hvað viltu gera núna?"
-
 #
 msgid "Repeats"
 msgstr "Endurtekningar"
@@ -10157,6 +10152,10 @@ msgstr "Það tókst að breyta PIN kóðanum."
 msgid "The PIN code has been saved successfully."
 msgstr ""
 
+#
+msgid "The PIN code you entered is wrong."
+msgstr "Kóðinn sem þú slóst inn er rangur."
+
 msgid "The PIN codes you entered are different."
 msgstr "PIN númerin sem að þú slóst inn eru ekki eins."
 
@@ -10219,10 +10218,6 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Slóðin %s er þegar til."
-
-#
-msgid "The PIN code you entered is wrong."
-msgstr "Kóðinn sem þú slóst inn er rangur."
 
 #, python-format
 msgid "The results have been written to %s"
@@ -10318,6 +10313,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Þessi DVD RW diskur er þegar formaður - endurformun mun eyða öllum gögnum af honum."
+
+msgid "This bouquet is protected by a parental control PIN"
+msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr ""
@@ -10428,10 +10426,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -10467,6 +10465,10 @@ msgstr "Þetta íforrit verður tekið út."
 #, python-format
 msgid "This receiver cannot decode %s streams!"
 msgstr ""
+
+#
+msgid "This service is protected by a parental control PIN"
+msgstr "Þessi rás er læst með kóða"
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr ""
@@ -11409,8 +11411,9 @@ msgid "View details"
 msgstr "Skoða nánar"
 
 #
-msgid "View list of available "
-msgstr "Skoða lista af tiltækum"
+#, fuzzy, python-format
+msgid "View list of available %s extensions."
+msgstr "Skoða lista af tiltækum EPG viðbótum."
 
 #
 msgid "View list of available CommonInterface extensions"
@@ -12032,9 +12035,6 @@ msgstr "Setja inn afrit"
 msgid "Yesterday"
 msgstr ""
 
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr ""
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -12112,6 +12112,9 @@ msgid "You must switch to the service %s (%s - '%s')!\n"
 msgstr ""
 
 msgid "You seem to be in timeshift!"
+msgstr ""
+
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
 msgstr ""
 
 #
@@ -12391,6 +12394,9 @@ msgstr "til baka"
 msgid "background image"
 msgstr "bakgrunns mynd"
 
+msgid "backup EPG cache"
+msgstr ""
+
 msgid "ballet"
 msgstr ""
 
@@ -12572,9 +12578,6 @@ msgid "entertainment (10-16 year old)"
 msgstr ""
 
 msgid "entertainment (6-14 year old)"
-msgstr ""
-
-msgid "backup EPG cache"
 msgstr ""
 
 msgid "equestrian"
@@ -13298,16 +13301,9 @@ msgstr ""
 msgid "testing"
 msgstr "er að vinna"
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr ""
-
 #
 msgid "this recording"
 msgstr "þessi upptaka"
-
-#
-msgid "This service is protected by a parental control PIN"
-msgstr "Þessi rás er læst með kóða"
 
 #
 msgid "toggle time, chapter, audio, subtitle info"
