--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -97,20 +97,12 @@ msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs be
 msgstr ""
 
 #
-msgid " extensions."
-msgstr " extensões."
-
-#
 #, fuzzy
 msgid " min"
 msgstr "%d min"
 
 msgid " ms"
 msgstr " ms"
-
-#
-msgid " packages selected."
-msgstr " pacotes seccionados."
 
 msgid " unicable LNB input of rotor"
 msgstr ""
@@ -408,6 +400,13 @@ msgstr "0"
 msgid "1"
 msgstr "1"
 
+#
+#, fuzzy, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] " pacotes seccionados."
+msgstr[1] " pacotes seccionados."
+
 msgid "10 MB/s"
 msgstr ""
 
@@ -616,6 +615,10 @@ msgstr "Uma gravação está em progresso. Por favor pare a gravação antes de 
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
 msgstr ""
+
+#
+msgid "A repeating event is currently recording. What would you like to do?"
+msgstr "A repetir o programa que está a gravar actualmente. O que pretende fazer?"
 
 #
 #, python-format
@@ -3759,6 +3762,10 @@ msgstr "Endereço IP"
 msgid "Enter PIN"
 msgstr ""
 
+#
+msgid "Enter PIN code"
+msgstr "Insira o código PIN"
+
 msgid "Enter URL"
 msgstr ""
 
@@ -3777,10 +3784,6 @@ msgstr "Entrar no menu principal..."
 
 msgid "Enter persistent PIN code"
 msgstr ""
-
-#
-msgid "Enter PIN code"
-msgstr "Insira o código PIN"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr ""
@@ -7905,15 +7908,6 @@ msgstr "Repetir Lista de Reprodução"
 msgid "Repeat type"
 msgstr "Tipo de repetição"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-
-#
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "A repetir o programa que está a gravar actualmente. O que pretende fazer?"
-
 #
 msgid "Repeats"
 msgstr "Repetições"
@@ -10428,6 +10422,10 @@ msgstr "O código PIN foi alterado com sucesso."
 msgid "The PIN code has been saved successfully."
 msgstr ""
 
+#
+msgid "The PIN code you entered is wrong."
+msgstr "O PIN que introduziu está errado."
+
 msgid "The PIN codes you entered are different."
 msgstr "Os códigos PIN que introduziu são diferentes."
 
@@ -10494,10 +10492,6 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "O caminho %s já existe."
-
-#
-msgid "The PIN code you entered is wrong."
-msgstr "O PIN que introduziu está errado."
 
 #, python-format
 msgid "The results have been written to %s"
@@ -10595,6 +10589,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Este DVD RW já está formatado - reformatar irá apagar todo o conteúdo do disco."
+
+msgid "This bouquet is protected by a parental control PIN"
+msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr ""
@@ -10705,10 +10702,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -10748,6 +10745,10 @@ msgstr "Este Plugin vai ser removido."
 #, python-format
 msgid "This receiver cannot decode %s streams!"
 msgstr "Este receptor não consegue descodificar streams %s!"
+
+#
+msgid "This service is protected by a parental control PIN"
+msgstr "Este canal está protegido pelo PIN de controlo parental"
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr ""
@@ -11713,8 +11714,9 @@ msgid "View details"
 msgstr "Ver detalhes"
 
 #
-msgid "View list of available "
-msgstr "Ver lista de disponíveis"
+#, fuzzy, python-format
+msgid "View list of available %s extensions."
+msgstr "Ver lista de extensões de Guia de Programação disponíveis"
 
 #
 msgid "View list of available CommonInterface extensions"
@@ -12361,9 +12363,6 @@ msgstr "Restauro de Backups"
 msgid "Yesterday"
 msgstr "Ontem"
 
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr ""
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -12447,6 +12446,9 @@ msgid "You must switch to the service %s (%s - '%s')!\n"
 msgstr ""
 
 msgid "You seem to be in timeshift!"
+msgstr ""
+
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
 msgstr ""
 
 #
@@ -12741,6 +12743,9 @@ msgstr "voltar"
 msgid "background image"
 msgstr "imagem de fundo"
 
+msgid "backup EPG cache"
+msgstr ""
+
 msgid "ballet"
 msgstr "ballet"
 
@@ -12923,9 +12928,6 @@ msgstr "entretenimento (10-16 anos)"
 
 msgid "entertainment (6-14 year old)"
 msgstr "entretenimento (6-14 anos)"
-
-msgid "backup EPG cache"
-msgstr ""
 
 msgid "equestrian"
 msgstr "equestre"
@@ -13657,16 +13659,9 @@ msgstr "tennis/squash"
 msgid "testing"
 msgstr "em curso"
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr ""
-
 #
 msgid "this recording"
 msgstr "esta gravação"
-
-#
-msgid "This service is protected by a parental control PIN"
-msgstr "Este canal está protegido pelo PIN de controlo parental"
 
 #
 msgid "toggle time, chapter, audio, subtitle info"
