--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -94,18 +94,12 @@ msgstr ""
 msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs because each tuner need a own SCR number."
 msgstr ""
 
-msgid " extensions."
-msgstr "extensões."
-
 #, fuzzy
 msgid " min"
 msgstr "%d minuto"
 
 msgid " ms"
 msgstr ""
-
-msgid " packages selected."
-msgstr "pacotes selecionados."
 
 msgid " unicable LNB input of rotor"
 msgstr ""
@@ -388,6 +382,12 @@ msgstr ""
 msgid "1"
 msgstr ""
 
+#, fuzzy, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] "pacotes selecionados."
+msgstr[1] "pacotes selecionados."
+
 msgid "10 MB/s"
 msgstr ""
 
@@ -576,6 +576,9 @@ msgstr "Uma gravação está em andamento. Pare a gravação antes de realizar u
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
 msgstr ""
+
+msgid "A repeating event is currently recording. What would you like to do?"
+msgstr "Repetindo o evento em gravação. Continuar?"
 
 #, python-format
 msgid "A required tool (%s) was not found."
@@ -3282,6 +3285,9 @@ msgstr "Endereço IP"
 msgid "Enter PIN"
 msgstr ""
 
+msgid "Enter PIN code"
+msgstr "Informe a senha"
+
 msgid "Enter URL"
 msgstr ""
 
@@ -3299,9 +3305,6 @@ msgstr "Menu principal"
 
 msgid "Enter persistent PIN code"
 msgstr ""
-
-msgid "Enter PIN code"
-msgstr "Informe a senha"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr ""
@@ -6839,14 +6842,6 @@ msgstr "Repetir lista de reprodução"
 msgid "Repeat type"
 msgstr "Repetição"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Repetindo o evento em gravação. Continuar?"
-
 msgid "Repeats"
 msgstr "Frequência"
 
@@ -9006,6 +9001,9 @@ msgstr "Senha alterada com sucesso."
 msgid "The PIN code has been saved successfully."
 msgstr ""
 
+msgid "The PIN code you entered is wrong."
+msgstr "Senha informada está incorreta."
+
 msgid "The PIN codes you entered are different."
 msgstr "Senhas informadas não combinam."
 
@@ -9067,9 +9065,6 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "O diretório %s já existe."
-
-msgid "The PIN code you entered is wrong."
-msgstr "Senha informada está incorreta."
 
 #, python-format
 msgid "The results have been written to %s"
@@ -9152,6 +9147,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Este DVD RW já está formatado. Reformatar irá remover todo o conteúdo do disco."
+
+msgid "This bouquet is protected by a parental control PIN"
+msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr ""
@@ -9262,10 +9260,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -9301,6 +9299,9 @@ msgstr "Este plugin será removido."
 #, python-format
 msgid "This receiver cannot decode %s streams!"
 msgstr "Este receptor não decodifica streams %s!"
+
+msgid "This service is protected by a parental control PIN"
+msgstr "Canal protegido com senha"
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr ""
@@ -10125,8 +10126,9 @@ msgstr "Ver Rass interativo"
 msgid "View details"
 msgstr "Ver detalhes"
 
-msgid "View list of available "
-msgstr "Ver disponíveis"
+#, fuzzy, python-format
+msgid "View list of available %s extensions."
+msgstr "Ver extensões de EPG disponíveis"
 
 msgid "View list of available CommonInterface extensions"
 msgstr "Ver extensões de CI disponíveis"
@@ -10711,9 +10713,6 @@ msgstr "Restaurar backups"
 msgid "Yesterday"
 msgstr "Ontem"
 
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr ""
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -10791,6 +10790,9 @@ msgid "You must switch to the service %s (%s - '%s')!\n"
 msgstr ""
 
 msgid "You seem to be in timeshift!"
+msgstr ""
+
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
 msgstr ""
 
 msgid "Your collection exceeds the size of a single layer medium, you will need a blank dual layer DVD!"
@@ -11059,6 +11061,9 @@ msgstr "Voltar"
 msgid "background image"
 msgstr "Imagem de fundo"
 
+msgid "backup EPG cache"
+msgstr ""
+
 msgid "ballet"
 msgstr "Balé"
 
@@ -11215,9 +11220,6 @@ msgstr "Entretenimento (10-16 anos)"
 
 msgid "entertainment (6-14 year old)"
 msgstr "Entretenimento (6-14 anos)"
-
-msgid "backup EPG cache"
-msgstr ""
 
 msgid "equestrian"
 msgstr "Equestre"
@@ -11859,14 +11861,8 @@ msgstr "Tênis/Squash"
 msgid "testing"
 msgstr "trabalhando"
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr ""
-
 msgid "this recording"
 msgstr "esta gravação"
-
-msgid "This service is protected by a parental control PIN"
-msgstr "Canal protegido com senha"
 
 msgid "toggle time, chapter, audio, subtitle info"
 msgstr "Alterna tempo, capítulo, áudio, informações da legenda"
