--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-10 01:42+0300\n"
+"POT-Creation-Date: 2021-09-13 23:45+0300\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -99,20 +99,12 @@ msgid " Warning: the selected tuner should not use SCR Unicable type for LNBs be
 msgstr ""
 
 #
-msgid " extensions."
-msgstr "proširenja."
-
-#
 #, fuzzy
 msgid " min"
 msgstr "%d min"
 
 msgid " ms"
 msgstr "ms"
-
-#
-msgid " packages selected."
-msgstr "Paketa izabrano"
 
 msgid " unicable LNB input of rotor"
 msgstr ""
@@ -426,6 +418,14 @@ msgstr "0"
 msgid "1"
 msgstr "1"
 
+#
+#, fuzzy, python-format
+msgid "1 package selected."
+msgid_plural "%d packages selected."
+msgstr[0] "Paketa izabrano"
+msgstr[1] "Paketa izabrano"
+msgstr[2] "Paketa izabrano"
+
 msgid "10 MB/s"
 msgstr ""
 
@@ -642,6 +642,10 @@ msgstr ""
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
 msgstr ""
+
+#
+msgid "A repeating event is currently recording. What would you like to do?"
+msgstr "Snimanje ponovljenog događaja je u toku. Šta želite da učinite?"
 
 #
 #, python-format
@@ -3787,6 +3791,10 @@ msgstr "IP Adresa"
 msgid "Enter PIN"
 msgstr ""
 
+#
+msgid "Enter PIN code"
+msgstr "Unesi PIN kod"
+
 msgid "Enter URL"
 msgstr ""
 
@@ -3805,10 +3813,6 @@ msgstr "Uđi u glavni meni"
 
 msgid "Enter persistent PIN code"
 msgstr ""
-
-#
-msgid "Enter PIN code"
-msgstr "Unesi PIN kod"
 
 msgid "Enter the frequency at which you LNB switches between low band and high band. For more information consult the spec sheet of your LNB."
 msgstr ""
@@ -7942,15 +7946,6 @@ msgstr "Ponovite listu za reprodukciju"
 msgid "Repeat type"
 msgstr "Tip ponavljanja"
 
-msgid ""
-"Repeating event currently recording.\n"
-"What do you want to do?"
-msgstr ""
-
-#
-msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Snimanje ponovljenog događaja je u toku. Šta želite da učinite?"
-
 #
 msgid "Repeats"
 msgstr "Ponavljanja"
@@ -10470,6 +10465,10 @@ msgstr "PIN kod je uspešno promenjen."
 msgid "The PIN code has been saved successfully."
 msgstr ""
 
+#
+msgid "The PIN code you entered is wrong."
+msgstr "Uneti PIN kod je pogrešan."
+
 msgid "The PIN codes you entered are different."
 msgstr "PIN kodovi koji ste uneli su različiti. "
 
@@ -10534,10 +10533,6 @@ msgstr ""
 #, python-format
 msgid "The path %s already exists."
 msgstr "Putanja %s već postoji."
-
-#
-msgid "The PIN code you entered is wrong."
-msgstr "Uneti PIN kod je pogrešan."
 
 #, python-format
 msgid "The results have been written to %s"
@@ -10637,6 +10632,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Ovaj DVD RW medij je već formatiran-ponovno formatiranje će izbrisati ceo sadržaj diska."
+
+msgid "This bouquet is protected by a parental control PIN"
+msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr ""
@@ -10747,10 +10745,10 @@ msgstr ""
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
 
-msgid "This option sets the picture contrast."
+msgid "This option sets the picture brightness."
 msgstr ""
 
-msgid "This option sets the picture brightness."
+msgid "This option sets the picture contrast."
 msgstr ""
 
 msgid "This option sets the picture flesh tones."
@@ -10790,6 +10788,10 @@ msgstr "Ovaj dodatak će biti uklonjen."
 #, python-format
 msgid "This receiver cannot decode %s streams!"
 msgstr ""
+
+#
+msgid "This service is protected by a parental control PIN"
+msgstr "Kanal je zaštićen s PIN kodom roditeljske kontrole"
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr ""
@@ -11747,8 +11749,9 @@ msgid "View details"
 msgstr "Vidi detalje"
 
 #
-msgid "View list of available "
-msgstr "Vidi listu mogućih"
+#, fuzzy, python-format
+msgid "View list of available %s extensions."
+msgstr "Vidi listu mogućih EPG proširenja"
 
 #
 msgid "View list of available CommonInterface extensions"
@@ -12375,9 +12378,6 @@ msgstr "Vrati bekape"
 msgid "Yesterday"
 msgstr ""
 
-msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
-msgstr ""
-
 #, python-format
 msgid ""
 "You already have a channel list installed,\n"
@@ -12458,6 +12458,9 @@ msgid "You must switch to the service %s (%s - '%s')!\n"
 msgstr ""
 
 msgid "You seem to be in timeshift!"
+msgstr ""
+
+msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
 msgstr ""
 
 #
@@ -12743,6 +12746,9 @@ msgstr "natrag"
 msgid "background image"
 msgstr "Pozadinska slika"
 
+msgid "backup EPG cache"
+msgstr ""
+
 msgid "ballet"
 msgstr ""
 
@@ -12923,9 +12929,6 @@ msgid "entertainment (10-16 year old)"
 msgstr ""
 
 msgid "entertainment (6-14 year old)"
-msgstr ""
-
-msgid "backup EPG cache"
 msgstr ""
 
 msgid "equestrian"
@@ -13654,16 +13657,9 @@ msgstr ""
 msgid "testing"
 msgstr "U radu"
 
-msgid "This bouquet is protected by a parental control PIN"
-msgstr ""
-
 #
 msgid "this recording"
 msgstr "ovo snimanje"
-
-#
-msgid "This service is protected by a parental control PIN"
-msgstr "Kanal je zaštićen s PIN kodom roditeljske kontrole"
 
 #
 msgid "toggle time, chapter, audio, subtitle info"
