--- a/po/ru.po
+++ b/po/ru.po
@@ -238,11 +238,10 @@ msgstr "%d минут"
 msgid "%d ms"
 msgstr "%d мс"
 
-#, fuzzy, python-format
 msgid "%d package selected."
 msgid_plural "%d packages selected."
 msgstr[0] " пакетов выбрано."
-msgstr[1] " пакетов выбрано."
+msgstr[1] " пакет выбран."
 msgstr[2] " пакетов выбрано."
 
 #, python-format
@@ -420,9 +419,8 @@ msgstr "18 V"
 msgid "2"
 msgstr "2"
 
-#, fuzzy
 msgid "2 new lines"
-msgstr "Две строки"
+msgstr "2 новые строки"
 
 msgid "20 MB/s"
 msgstr "20 МБ/с"
@@ -1940,7 +1938,7 @@ msgid "Configure remote control type"
 msgstr "Настройка типа пульта Д/У"
 
 msgid "Configure separator type used in full description for separate short and extended descriptions."
-msgstr ""
+msgstr "Настройте тип разделителя, используемый в полном описании, для отдельных кратких и расширенных описаний."
 
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Настройка режима DiSEqC для этого LNB."
@@ -3804,7 +3802,7 @@ msgid "Frontprocessor version: %s"
 msgstr "Версия фронтпроцессора: %s"
 
 msgid "Full description separator"
-msgstr ""
+msgstr "Разделитель полного описания"
 
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
@@ -5757,9 +5755,8 @@ msgstr "РМТ PID"
 msgid "PPanel"
 msgstr "PPanel (shell скрипты)"
 
-#, fuzzy
 msgid "PULSe 4K(mini)"
-msgstr "PULSe 4K"
+msgstr "PULSe 4K(mini)"
 
 msgid "Package list update"
 msgstr "Список пакетов обновления"
@@ -6749,7 +6746,7 @@ msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subt
 msgstr "Замена `- ` в диалогах цвета текста для говорящего (как субтитры телетекста для людей с нарушениями слуха)."
 
 msgid "Replace newlines in EPG"
-msgstr ""
+msgstr "Заменить символы новой строки в EPG"
 
 msgid "Request for physical address report"
 msgstr "Запрос для физического адреса оповещения"
@@ -7331,7 +7328,7 @@ msgid "Select channel to record from"
 msgstr "Выбрать канал для записи из"
 
 msgid "Select char for replacing newlines in EPG."
-msgstr ""
+msgstr "Выберите символ для замены новой строки в EPG."
 
 msgid "Select copy destination for:"
 msgstr "Выбор расположение для копии:"
@@ -9959,9 +9956,8 @@ msgstr "Просмотр интерактивного Rass..."
 msgid "View details"
 msgstr "Показать детали"
 
-#, fuzzy, python-format
 msgid "View list of available %s extensions."
-msgstr "Просмотр списка доступных дополнений EPG."
+msgstr "Просмотр списка доступных %s дополнений."
 
 msgid "View list of available CommonInterface extensions"
 msgstr "Просмотр списка доступных дополнений CI (Common Interface) модулей"
@@ -10616,7 +10612,7 @@ msgstr "Вы не выбрали канал для записи."
 
 #, python-format
 msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
-msgstr ""
+msgstr "Вам необходимо подождать %(min)d минут, %(sec)d секунд!"
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11216,9 +11212,8 @@ msgstr "перейти к следующей главе"
 msgid "jump to chapter by number"
 msgstr "перейти к разделу по номеру"
 
-#, fuzzy
 msgid "kB"
-msgstr "B"
+msgstr "kB"
 
 msgid "languages"
 msgstr "языки"
@@ -11325,9 +11320,8 @@ msgstr "природа/животные/окружающая среда"
 msgid "never"
 msgstr "никогда"
 
-#, fuzzy
 msgid "new line"
-msgstr "Две строки"
+msgstr "новая строка"
 
 msgid "new media"
 msgstr "новые media"
@@ -11389,9 +11383,8 @@ msgstr "недействительный интерфейс"
 msgid "not_tested"
 msgstr "без теста"
 
-#, fuzzy
 msgid "nothing"
-msgstr "Ничего не делать"
+msgstr "ничего"
 
 msgid "nothing connected"
 msgstr "ничего не подключено"
@@ -11412,7 +11405,7 @@ msgid "offset is"
 msgstr "смещение"
 
 msgid "omit"
-msgstr ""
+msgstr "пропускать"
 
 msgid "on"
 msgstr "вкл."
@@ -11623,7 +11616,7 @@ msgid "social/spiritual science"
 msgstr "социальная/духовная наука"
 
 msgid "space"
-msgstr ""
+msgstr "пробел"
 
 msgid "special events"
 msgstr "специальное событие"
